fix: hide overflow

--- a/frontend/src/app/feed/feed.component.scss
+++ b/frontend/src/app/feed/feed.component.scss
@@ -9,6 +9,7 @@
   margin-right: 10vw;
   margin-bottom: 2vh;
   min-height: 30vh;
+  overflow: hidden;
 
 
   background-color: $secondary_color;
